// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiComment is rendered 1`] = `
<li
  aria-label="aria-label"
  class="euiComment testClass1 testClass2 emotion-euiTimelineItem-center-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="emotion-euiTimelineItemIcon-center"
  >
    <div
      class="emotion-euiTimelineItemIcon__content"
    >
      <div
        aria-label=""
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar emotion-euiAvatar-user-m-uppercase-subdued"
        role="img"
        title=""
      >
        <span
          class="euiAvatar__icon"
          data-euiicon-type="user"
        />
      </div>
    </div>
  </div>
  <div
    class="emotion-euiTimelineItemEvent-center"
  >
    <div
      class="euiCommentEvent emotion-euiCommentEvent"
      data-type="custom"
    />
  </div>
</li>
`;

exports[`EuiComment props event is rendered 1`] = `
<li
  class="euiComment emotion-euiTimelineItem-center"
>
  <div
    class="emotion-euiTimelineItemIcon-center"
  >
    <div
      class="emotion-euiTimelineItemIcon__content"
    >
      <div
        aria-label=""
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar emotion-euiAvatar-user-m-uppercase-subdued"
        role="img"
        title=""
      >
        <span
          class="euiAvatar__icon"
          data-euiicon-type="user"
        />
      </div>
    </div>
  </div>
  <div
    class="emotion-euiTimelineItemEvent-center"
  >
    <div
      class="euiCommentEvent emotion-euiCommentEvent"
      data-type="update"
    >
      <div
        class="euiCommentEvent__header emotion-euiCommentEvent__header"
      >
        <div
          class="euiPanel euiPanel--transparent euiPanel--paddingSmall emotion-euiPanel-grow-m-s-transparent"
        >
          <div
            class="euiCommentEvent__headerMain emotion-euiCommentEvent__headerMain"
          >
            <div
              class="euiCommentEvent__headerData emotion-euiCommentEvent__headerData"
            >
              <div
                class="euiCommentEvent__headerUsername emotion-euiCommentEvent__headerUsername"
              >
                someuser
              </div>
              <div
                class="euiCommentEvent__headerEvent emotion-euiCommentEvent__headerEvent"
              >
                commented
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</li>
`;

exports[`EuiComment props timestamp is rendered 1`] = `
<li
  class="euiComment emotion-euiTimelineItem-center"
>
  <div
    class="emotion-euiTimelineItemIcon-center"
  >
    <div
      class="emotion-euiTimelineItemIcon__content"
    >
      <div
        aria-label=""
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar emotion-euiAvatar-user-m-uppercase-subdued"
        role="img"
        title=""
      >
        <span
          class="euiAvatar__icon"
          data-euiicon-type="user"
        />
      </div>
    </div>
  </div>
  <div
    class="emotion-euiTimelineItemEvent-center"
  >
    <div
      class="euiCommentEvent emotion-euiCommentEvent"
      data-type="update"
    >
      <div
        class="euiCommentEvent__header emotion-euiCommentEvent__header"
      >
        <div
          class="euiPanel euiPanel--transparent euiPanel--paddingSmall emotion-euiPanel-grow-m-s-transparent"
        >
          <div
            class="euiCommentEvent__headerMain emotion-euiCommentEvent__headerMain"
          >
            <div
              class="euiCommentEvent__headerData emotion-euiCommentEvent__headerData"
            >
              <div
                class="euiCommentEvent__headerUsername emotion-euiCommentEvent__headerUsername"
              >
                someuser
              </div>
              <div
                class="euiCommentEvent__headerTimestamp"
              >
                <time>
                  21 days ago
                </time>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</li>
`;

exports[`EuiComment renders a body 1`] = `
<li
  class="euiComment emotion-euiTimelineItem-top"
>
  <div
    class="emotion-euiTimelineItemIcon-top"
  >
    <div
      class="emotion-euiTimelineItemIcon__content"
    >
      <div
        aria-label=""
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar emotion-euiAvatar-user-m-uppercase-subdued"
        role="img"
        title=""
      >
        <span
          class="euiAvatar__icon"
          data-euiicon-type="user"
        />
      </div>
    </div>
  </div>
  <div
    class="emotion-euiTimelineItemEvent-top"
  >
    <div
      class="euiCommentEvent emotion-euiCommentEvent"
      data-type="custom"
    >
      <div
        class="euiCommentEvent__body emotion-euiCommentEvent__body-custom"
      >
        <p>
          This is the body.
        </p>
      </div>
    </div>
  </div>
</li>
`;

exports[`EuiComment renders a timeline icon 1`] = `
<li
  class="euiComment emotion-euiTimelineItem-top"
>
  <div
    class="emotion-euiTimelineItemIcon-top"
  >
    <div
      class="emotion-euiTimelineItemIcon__content"
    >
      <div
        aria-label=""
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar emotion-euiAvatar-user-m-uppercase-subdued"
        role="img"
        title=""
      >
        <span
          class="euiAvatar__icon"
          data-euiicon-type="dot"
        />
      </div>
    </div>
  </div>
  <div
    class="emotion-euiTimelineItemEvent-top"
  >
    <div
      class="euiCommentEvent emotion-euiCommentEvent"
      data-type="custom"
    >
      <div
        class="euiCommentEvent__body emotion-euiCommentEvent__body-custom"
      >
        <p>
          This is the body.
        </p>
      </div>
    </div>
  </div>
</li>
`;
